# texas_agent

./: .gitignore  README.md  pyproject.toml
arm_side/: AGENT_LINUX_BATCH_INTEGRATION.v1.md  LAN_ORCHESTRATION_HANDOFF(1).md  README.md
arm_side/panthera_package/lan_orchestrator/: agent_client.py  hand_event_client.py  orchestrator_config.example.json  robot_orchestrator_server.py
arm_side/panthera_package/scripts/: A_replay_trajectory.py
arm_side/reference/: A_replay_trajectory.py  card_calibration.py
charts/9max_100bb/BB/: vs_open_BTN.json  vs_open_SB.json
config/: arm_points.example.yaml  deck_order.txt  table.yaml  zones.yaml
docs/: schema.md  前端对接-转播大屏.md  执行手册-无机械臂版.md  机械臂-Agent集成设计.md  测试计划-D2-无机械臂.md
sessions/: 20260710-182858-final.jsonl  20260710-212947-drill-dead-endpoint.jsonl  20260710-223356-drill-live-llm.jsonl  20260710-223501-drill-live-llm2.jsonl  20260710-223542-drill-killed-endpoint.jsonl
src/texas_agent/: analysis.py  arm.py  broadcast_view.py  bus.py  cards.py  commentator.py  engine.py  engine_cli.py  gto.py  gto_baseline_view.py  live_cli.py  llm.py  orchestrator.py  prompter.py  vlm.py  webview.py
tests/: test_analysis.py  test_arm.py  test_broadcast_view.py  test_bus_replay.py  test_commentator.py  test_engine.py  test_gto_baseline_view.py  test_orchestrator.py  test_shoe.py  test_stability.py  test_vlm.py  test_webview.py  test_yolo_reader.py
tools/: bench_vlm.py  calib_check.py  cam_server.py  capture_templates.py  make_mat_sheet.py  make_sample_charts.py  replay.py  run_live.sh  run_preview.sh  tts_client.py  zone_viz.py
(+21 files in other folders)
